@@ -7,6 +7,8 @@ Features
 Bugfixes
 --------
 
+* Fix ``nikola new_post --available-formats`` crashing with TypeError
+  (Issue #3750)
 * Fix the new plugin manager not loading plugins if the plugin folder is a symlink (Issue #3741)
 * Fix the ``nikola plugin`` command not working (Issue #3736)
 
